<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:layout_marginHorizontal="15dp"
    android:orientation="vertical"
    tools:context=".presentation.fragments.CommercialFragment"
    tools:theme="@style/Base.Theme.Vakifbank_mobile">



    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_customer_number"
            android:hint="@string/commercial_tab_hint_customer_Number"
            android:textColorHint="@color/til_box_stroke_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_user_code"
            android:hint="@string/commercial_tab_hint_user_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_password"
            android:hint="@string/commercial_tab_hint_digital_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue"
        style="@style/button_orange_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/commercial_tab_button_text"/>

</LinearLayout>